--- a/ansible/inventory/group_vars/docker_compose_pihole.yaml
+++ b/ansible/inventory/group_vars/docker_compose_pihole.yaml
@@ -48,8 +48,8 @@ pihole_cname_records:
     target: "k8s.allanshomelab.com"
   - alias: "traefik.k8s.allanshomelab.com"
     target: "k8s.allanshomelab.com"
-  - alias: "portainer.k8s.allanshomelab.com"
-    target: "k8s.allanshomelab.com"
+  - alias: "portainer.docker.allanshomelab.com"
+    target: "docker.allanshomelab.com"
   - alias: "prometheus.k8s.allanshomelab.com"
     target: "k8s.allanshomelab.com"
   - alias: "radarr.k8s.allanshomelab.com"
