--- a/ansible/inventory/host_vars/carrie.yaml
+++ b/ansible/inventory/host_vars/carrie.yaml
@@ -1,7 +1,13 @@
+portainer_data_dir: "/var/lib/portainer"
+
 "backup_runner_volumes": [
   { 
     "src": "{{ memos_data_dir }}",
     "dest": "{{ backup_runner_user }}@{{ backup_runner_remote_host }}:{{ backup_runner_remote_base_path }}/memos" 
+  },
+  { 
+    "src": "{{ portainer_data_dir }}",
+    "dest": "{{ backup_runner_user }}@{{ backup_runner_remote_host }}:{{ backup_runner_remote_base_path }}/portainer" 
   }
 ]
 
