--- a/ansible/playbooks/l3-converge-ubuntu.yml
+++ b/ansible/playbooks/l3-converge-ubuntu.yml
@@ -20,6 +20,7 @@
 - import_playbook: l3-converge-docker-immich.yml
 - import_playbook: l3-converge-docker-vaultwarden.yml
 - import_playbook: l3-converge-docker-portainer.yml
+- import_playbook: l3-converge-docker-nginx.yml
 
 - import_playbook: l3-converge-ubuntu-openvpn.yml
 
